0.02
 - Add ANSI support.
 - Fix dependencies.
 - Regen example.
 - Remove trailing space in code.

0.01 2023-11-19T17:44:04+01:00
 - First version.