@@ -1,10 +1,12 @@
 TODO
 ====
 2. Tests.
-3. Add constructor parameter to doc.
 4.
 
 Applied
 =======
 1. ANSI support
 OK [20231119] skim
+
+3. Add constructor parameter to doc.
+OK [20231120] skim
